# UniversalDevice

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Version.hpp.in  docker-compose.yaml
Cpp/: CMakeLists.txt
Cpp/UniversalDeviceClientService/: CMakeLists.txt  main.cpp
Cpp/UniversalDeviceClientService/include/: Application.h  DevicesWidget.h  Enums.h  Settings.h
Cpp/UniversalDeviceClientService/source/: Application.cpp  DevicesWidget.cpp  Settings.cpp
Cpp/UniversalDeviceFrontendService/: CMakeLists.txt  main.cpp
Cpp/UniversalDeviceFrontendService/include/: Enums.h  FrontendDefines.h  Settings.h  WidgetHelper.h
Cpp/UniversalDeviceFrontendService/source/: Application.cpp  Settings.cpp  WidgetHelper.cpp
Cpp/UniversalDeviceLib/: CMakeLists.txt
Cpp/UniversalDeviceLib/include/: Constants.h  Defines.h  Logger.h
Cpp/UniversalDeviceLib/source/: Constants.cpp  Logger.cpp
Cpp/UniversalDeviceLib/tests/: AccountManager.cpp  Base64.cpp  DbExtension.cpp  TimeHelperTests.cpp  UrlHelper.cpp
Cpp/UniversalDeviceService/: CMakeLists.txt  main.cpp
Cpp/UniversalDeviceService/include/: Defines.h  Service.h  Settings.h
Cpp/UniversalDeviceService/source/: Service.cpp  Settings.cpp
Cpp/UniversalDeviceService/tests/: NightModeTableStorageCacheTests.cpp
Cpp/UniversalDeviceSimulators/RelaySimulator/: CMakeLists.txt  main.cpp
Cpp/UniversalDeviceSimulators/SimulatorLib/: CMakeLists.txt
Cpp/UniversalDeviceSimulators/TemperatureSimulator/: CMakeLists.txt
Cpp/UniversalDeviceSimulators/ThermometerSimulator/: CMakeLists.txt  main.cpp
Cpp/UniversalDeviceTests/CrowTest/: CMakeLists.txt  main.cpp
Service/UniversalDeviceService/: CMakeLists.txt  main.cpp
Service/UniversalDeviceService/include/: Service.h  Settings.h
Service/UniversalDeviceService/source/: Service.cpp  Settings.cpp
UniversalDeviceFrontendService/: Application.cpp  Application.hpp  CMakeLists.txt  Enums.hpp  FrontendDefines.hpp  Settings.cpp  Settings.hpp  WidgetHelper.cpp  WidgetHelper.hpp  main.cpp
UniversalDeviceFrontendService/customWidgets/: BaseEventEditor.cpp  BaseEventEditor.hpp  DeviceButton.cpp  DeviceButton.hpp  DeviceComboBox.cpp  DeviceComboBox.hpp  EventReceiverWidget.cpp  IEventEditorWidget.hpp  RelayEventEditor.cpp  RelayEventEditor.hpp  ThermometerEventEditor.cpp  ThermostatEventEditor.cpp  ThermostatEventEditor.hpp  TimerEventEditor.cpp  TimerEventEditor.hpp
UniversalDeviceFrontendService/include/: Application.h  WidgetHelper.h
UniversalDeviceFrontendService/include/customWidgets/: BaseEventEditor.h  DeviceComboBox.h  RelayEventEditor.h  ThermometerEventEditor.h  TimerEventEditor.h
UniversalDeviceFrontendService/include/interfaces/: IStackWidget.h
UniversalDeviceFrontendService/include/stackWidgets/: BaseDeviceWidget.h  DevicesWidget.h  EventsTableModel.h  LoginWidget.h  MotionRelayWidget.h  RelayWidget.h  TemperatureChartModel.h  ThermometerWidget.h
UniversalDeviceFrontendService/interfaces/: IStackHolder.hpp  IStackWidget.hpp
UniversalDeviceFrontendService/source/: Application.cpp  Settings.cpp  WidgetHelper.cpp
UniversalDeviceFrontendService/source/customWidgets/: DeviceButton.cpp  DeviceComboBox.cpp  RelayEventEditor.cpp  ThermometerEventEditor.cpp  TimerEventEditor.cpp
UniversalDeviceFrontendService/source/stackWidgets/: DevicesWidget.cpp  EventsTableModel.cpp  LogsWidget.cpp  RelayWidget.cpp  TemperatureChartModel.cpp
UniversalDeviceFrontendService/stackWidgets/: BaseDeviceWidget.cpp  BaseDeviceWidget.hpp  BaseStackWidget.hpp  DevicesWidget.cpp  DevicesWidget.hpp  EventsTableModel.cpp  EventsTableModel.hpp  EventsWidget.cpp  EventsWidget.hpp  LoginWidget.cpp  LoginWidget.hpp  LogsWidget.cpp  MotionRelayWidget.cpp  MotionRelayWidget.hpp  RelayWidget.cpp  RelayWidget.hpp  TemperatureChartModel.cpp  ThermometerWidget.cpp
UniversalDeviceSimulators/ThermometerSimulator/: CMakeLists.txt  Parameters.cpp  Parameters.hpp  ThermometerSimulator.cpp  ThermometerSimulator.hpp  main.cpp
UniversalDeviceSimulators/ThermometerSimulator/include/: Parameters.h
UniversalDeviceSimulators/ThermometerSimulator/source/: Parameters.cpp
UniversalDeviceTests/: AccountManagerTests.cpp  Base64Tests.cpp  CMakeLists.txt  DbExtensionTests.cpp  FMTTests.cpp  JsonFileReaderTests.cpp  MarshalingTests.cpp  SplitStringTests.cpp  TimeHelperTests.cpp
src/UniversalDeviceLib/: CMakeLists.txt
src/UniversalDeviceLib/authentication/: Account.hpp  AccountManager.cpp  AccountManager.hpp  AccountManagerInitializer.cpp  AccountManagerInitializer.hpp
src/UniversalDeviceLib/cache/: Cache.hpp
src/UniversalDeviceLib/component/: ComponentDescription.cpp  ComponentDescription.hpp  ExtendedComponentDescription.hpp
src/UniversalDeviceLib/core/: Base64Helper.cpp  Base64Helper.hpp  Constants.cpp  Constants.hpp  DbExtension.cpp  DbExtension.hpp  Defines.hpp  Enums.hpp  JsonFileReader.cpp  JsonFileReader.hpp  Logger.cpp  Logger.hpp  PathHelper.cpp  PathHelper.hpp  Position.hpp  ProcessSettingsReader.cpp  ProcessSettingsReader.hpp  Singleton.hpp  TimeHelper.cpp  TimeHelper.hpp  UniversalData.cpp  UniversalData.hpp  UrlHelper.hpp  Uuid.cpp  Uuid.hpp
src/UniversalDeviceLib/events/: BaseEvent.hpp  Event.hpp  RelayEvent.hpp  Scenario.hpp  SunriseEvent.hpp  SunsetEvent.hpp  ThermometerEvent.hpp  ThermostatEvent.hpp  TimerEvent.hpp
src/UniversalDeviceLib/marshaling/: DatabaseMarshaling.cpp  DatabaseMarshaling.hpp  Marshaling.cpp  Marshaling.hpp
src/UniversalDeviceLib/messages/: DeviceDescription.hpp  Message.hpp  MessageHeader.hpp  MessageHelper.cpp  MessageHelper.hpp  Provider.cpp  Provider.hpp  Receiver.hpp
src/UniversalDeviceLib/network/: RequestAddress.cpp  (+3 more)
src/UniversalDeviceService/: CMakeLists.txt  main.cpp
src/UniversalDeviceServiceLib/: CMakeLists.txt  Server.cpp  Server.hpp
src/UniversalDeviceTests/: AccountManagerTests.cpp  Base64Tests.cpp  CMakeLists.txt  DbExtensionTests.cpp  FMTTests.cpp  JsonFileReaderTests.cpp  ScenarioActivationTest.cpp  ScenariosTableStorageCacheTest.cpp  SplitStringTests.cpp  TimeHelperTests.cpp  UrlHelperTests.cpp
(+769 files in other folders)
